agrego_carpeta_docs_para_GitHub_Pages

--- a/packages.bib
+++ b/packages.bib
@@ -31,6 +31,14 @@
   url = {https://github.com/rstudio/rmarkdown},
 }
 
+@Manual{R-xfun,
+  title = {xfun: Supporting Functions for Packages Maintained by Yihui Xie},
+  author = {Yihui Xie},
+  year = {2025},
+  note = {R package version 0.52},
+  url = {https://github.com/yihui/xfun},
+}
+
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
   author = {Yihui Xie},
