actualizo contenido del libro

--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,21 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.name/knitr/},
 }
+
+@misc{daiad_project,
+  title        = {DAIAD: Delivering Advanced Knowledge Through Smart Water Meters},
+  author       = {Spyropoulos, Theodoros and Soldatos, John and others},
+  year         = {2014},
+  howpublished = {\url{https://cordis.europa.eu/project/id/619186}},
+  note         = {Proyecto financiado por el Séptimo Programa Marco de la Unión Europea (FP7)},
+  institution  = {European Commission},
+  url          = {https://cordis.europa.eu/project/id/619186}
+}
+
+@misc{smart_water_meters,
+  title = {Smart Water Meter Consumption Time Series},
+  author = {{Hellenic Data Service}},
+  year = {2023},
+  url = {https://data.hellenicdataservice.gr/dataset/78776f38-a58b-4a2a-a8f9-85b964fe5c95},
+  note = {Licencia: CC BY-SA 4.0}
+}
