--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "A Minimal Book Example"
-author: "Yihui Xie"
+title: "PREDICCIÓN DEL CONSUMO DE AGUA UTILIZANDO SERIES DE TIEMPO GENERADAS POR MEDIDORES INTELIGENTES"
+author: "Dany Enriquez"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: bookdown::gitbook
@@ -9,28 +9,37 @@ bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
 github-repo: rstudio/bookdown-demo
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+language:
+  ui:
+    chapter_name: "Capítulo "
+    appendix_name: "Apéndice "
+    toc: "Tabla de contenido"
+    references: "Referencias"
+    search: "Buscar"
+  label:
+    fig: "Figura "
+    tab: "Tabla "
+    eq: "Ecuación "
+    thm: "Teorema "
+    lem: "Lema "
+    cor: "Corolario "
+    prp: "Proposición "
+    cnj: "Conjetura "
+    def: "Definición "
+    exm: "Ejemplo "
+    exr: "Ejercicio "
+    proof: "Demostración"
+
 ---
 
-# Prerequisites
+# Importancia del Análisis del Consumo de Agua
 
-This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
+El uso responsable del agua representa uno de los principales desafíos de la sociedad contemporánea, debido a factores como el cambio climático, la contaminación y la sobreexplotación de los recursos hídricos. Estas problemáticas comprometen seriamente la sostenibilidad de la vida urbana y el equilibrio de los ecosistemas.
 
-The **bookdown** package can be installed from CRAN or Github:
+Frente a este escenario, diversas ciudades han comenzado a implementar soluciones tecnológicas, como los medidores inteligentes, que permiten monitorear y controlar el consumo de agua por parte de la población. Estos dispositivos generan datos detallados a lo largo del tiempo, lo que facilita la detección de patrones de uso, así como la identificación de comportamientos anómalos o indicios de fraude. Esta información resulta fundamental para diseñar estrategias que promuevan un uso más eficiente y responsable del recurso hídrico.
 
-```{r eval=FALSE}
-install.packages("bookdown")
-# or the development version
-# devtools::install_github("rstudio/bookdown")
-```
+Existen numerosos estudios que abordan esta problemática desde diferentes enfoques. En el presente trabajo se tomará como referencia un conjunto de datos recopilado en el marco del proyecto europeo DAIAD, financiado por el Séptimo Programa Marco de la Unión Europea [@daiad_project]. Este conjunto contiene series temporales de consumo de agua registradas por medidores inteligentes (Smart Water Meters, SWM) instalados en 1007 hogares de la ciudad de Alicante, gestionados por la empresa AMAEM.
 
-Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
+El objetivo de este estudio es generar pronósticos de consumo a partir de dicha información, con el fin de comprender los patrones de comportamiento en el uso del agua y, en consecuencia, poner estos resultados a disposición de las entidades o actores interesados, para apoyar la toma de decisiones y fomentar un uso más eficiente y sostenible del recurso.
 
-To compile this example to PDF, you need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.org/tinytex/>.
-
-```{r include=FALSE}
-# automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
-```
+Los datos utilizados en este análisis provienen del conjunto titulado Smart Water Meter Consumption Time Series[@smart_water_meters], el cual está disponible públicamente en el portal de la Hellenic Data Service y se encuentra licenciado bajo los términos de CC BY-SA 4.0. Este recurso proporciona una base sólida para el desarrollo de modelos de pronóstico y análisis de patrones de consumo de agua.
