Actualización de contenido y mejora de textos en el libro

--- a/book.bib
+++ b/book.bib
@@ -26,3 +26,14 @@
   url = {https://data.hellenicdataservice.gr/dataset/78776f38-a58b-4a2a-a8f9-85b964fe5c95},
   note = {Licencia: CC BY-SA 4.0}
 }
+
+@book{hyndman2021forecasting,
+  title     = {Forecasting: Principles and Practice},
+  author    = {Hyndman, Rob J. and Athanasopoulos, George},
+  year      = {2021},
+  edition   = {3rd},
+  publisher = {OTexts},
+  url       = {https://otexts.com/fpp3/transformations.html},
+  note      = {Accessed: 2025-05-01}
+}
+
