--- a/book.bib
+++ b/book.bib
@@ -37,3 +37,13 @@
   note      = {Accessed: 2025-05-01}
 }
 
+@misc{HurtadoGarzon2013,
+  author = {Hurtado Garzón, Lizette Juliana},
+  title = {Aplicación de metodologías ARIMA y Holt-Winters en la valoración del pasivo contingente de proyectos de infraestructura vial desarrollados bajo esquemas de participación público-privada},
+  year = {2013},
+  institution = {Universidad de los Andes},
+  type = {Proyecto de grado},
+  url = {https://repositorio.uniandes.edu.co/bitstreams/6ab918dc-dc2d-4ee4-85d7-ee139f7d195c/download},
+  note = {Acceso al PDF: \url{https://repositorio.uniandes.edu.co/bitstreams/6ab918dc-dc2d-4ee4-85d7-ee139f7d195c/download}}
+}
+
