--- a/Analisis-Consumo-Agua.Rmd
+++ b/Analisis-Consumo-Agua.Rmd
@@ -1,3 +1,45 @@
+--- 
+    title: "PREDICCIÓN DEL CONSUMO DE AGUA UTILIZANDO SERIES DE TIEMPO GENERADAS POR MEDIDORES INTELIGENTES"
+    author: "Dany Enriquez"
+    date: "`r Sys.Date()`"
+    site: bookdown::bookdown_site
+    output: bookdown::gitbook
+    documentclass: book
+    bibliography: [book.bib, packages.bib]
+    biblio-style: apalike
+    link-citations: yes
+    github-repo: rstudio/bookdown-demo
+    language:
+      ui:
+        chapter_name: "Capítulo "
+        appendix_name: "Apéndice "
+        toc: "Tabla de contenido"
+        references: "Referencias"
+        search: "Buscar"
+      label:
+        fig: "Figura "
+        tab: "Tabla "
+        eq: "Ecuación "
+        thm: "Teorema "
+        lem: "Lema "
+        cor: "Corolario "
+        prp: "Proposición "
+        cnj: "Conjetura "
+        def: "Definición "
+        exm: "Ejemplo "
+        exr: "Ejercicio "
+        proof: "Demostración"
+
+---
+
+# Importancia del Análisis del Consumo de Agua
+
+Placeholder
+
+
+
+<!--chapter:end:index.Rmd-->
+
 # Analisis Exploratorio de Datos
 
 ## Selección de Usuario
@@ -8,7 +50,6 @@ El usuario selccionado al azar tiene user.key 4f7729cf-f0fc-4333-bea7-4ee4aeaaa2
 
 ```{r, echo=FALSE}
 data<-read.csv2("usuario_aleatorio.csv")
-df<-data
 ```
 
 
@@ -35,13 +76,13 @@ kable(
 primeros 5 registros.
 
 ```{r, echo=FALSE}
-head(df, 5)
+head(data, 5)
 ```
 
 últimos 5 registros
 
 ```{r, echo=FALSE}
-tail(df, 5)
+tail(data, 5)
 ```
 
 El análisis de los datos revela que los registros fueron tomados en intervalos de una hora. El período de recopilación abarca desde el año 2015 hasta 2017 y ya se han calculado la diferencia en los consumos.
@@ -64,8 +105,8 @@ sapply(data, class)
 podemos observar que la variable "datetime" no esta en formato de fecha.
 
 ```{r, echo=FALSE}
-df$datetime <- as.POSIXct(df$datetime, format = "%d/%m/%Y %H:%M:%S")
-
+# Convertir a formato de fecha y hora
+data$datetime <- as.POSIXct(data$datetime, format = "%d/%m/%Y %H:%M:%S")
 
 ```
 
@@ -97,17 +138,11 @@ kable(
 )
 ```
 
-El análisis revela valores de consumo anormalmente elevados en determinadas horas, lo que evidencia la presencia de valores atípicos y una considerable variabilidad en la serie temporal, ademas de valores con consumos negativos
-
-
+El análisis revela valores de consumo anormalmente elevados en determinadas horas, lo que evidencia la presencia de valores atípicos y una considerable variabilidad en la serie temporal.
 
 Se adicionara el consumo por año
 
 ```{r, echo=FALSE, warning=FALSE,message=FALSE}
-library(dplyr)
-library(knitr)
-library(kableExtra)
-library(lubridate)
 library(kableExtra)
 library(dplyr)
 tabla_resumen <- df %>%
@@ -125,23 +160,6 @@ tabla_resumen %>%
 
 ```
 
-## valores Negativos 
-
-```{r}
-valores_negativos <- df %>% filter(diff < 0)
-valores_negativos
-```
-
-## Imputacion Valores negativos
-
-```{r,echo=FALSE}
-df <- df %>%
-  mutate(diff = ifelse(diff < 0, 0, diff))
-num_negativos_despues <- sum(df$diff < 0, na.rm = TRUE)
-cat("Número de valores negativos después de imputar:", num_negativos_despues, "\n")
-```
-
-
 ## Resumen Analisis Estadistico
 
 Se observa que el consumo de agua presenta una notable variabilidad y numerosos valores atípicos. El rango de consumo oscila entre 0 y 2152 metros cúbicos por hora. Sin embargo, el valor promedio general se encuentra alrededor de los 33 metros cúbicos, lo cual sugiere que, aunque existen registros extremos de consumo, la mayoría de los valores se concentran en niveles mucho más bajos. Esta disparidad podría indicar posibles irregularidades en los datos o un comportamiento inconsistente en el consumo de agua.
@@ -157,7 +175,7 @@ En este apartado analizaremos los diferentes comportamientos de la variable "dif
 library(ggplot2)
 library(dplyr)
 library(lubridate)
-ggplot(df,aes(x="", y= diff))+geom_boxplot(fill="darkblue", color = "lightblue")+ labs(x="", y= "consumo(diff)")+ theme_minimal()
+ggplot(df,aes(x="", y= df$diff))+geom_boxplot(fill="darkblue", color = "lightblue")+ labs(x="", y= "consumo(diff)")+ theme_minimal()
 
 ```
 
@@ -552,4 +570,96 @@ No se observa algun patron claro que indique que la varianza no sea constante, s
 
 En este sentido ya que no se cumple la normalidad en los supuestos se debe tener cuidado con las inferencias que se realicen sobre este modelo, sin embargo no afecta la aplicación ni los pronósticos hechos por el modelo.
 
+# Metodología Box-Jenkins y Modelos ARIMA
+
+## **Modelo ARIMA**
+Los modelos autorregresivos integrados de media móvil (ARIMA, por sus siglas en inglés: AutoRegressive Integrated Moving Average) combinan tres componentes:
+
+* AR (Autorregresivo): la serie se explica por sus propios valores pasados.
+
+* I (Integrado): se aplican diferenciaciones a la serie para hacerla estacionaria.
+
+* MA (Media móvil): se modela el error como una combinación lineal de errores pasados.
+
+Un modelo ARIMA se denota como ARIMA(p, d, q), donde:
+
+* p: número de términos autorregresivos (AR).
+
+* d: número de diferenciaciones necesarias para hacer la serie estacionaria.
+
+* q: número de términos de medias móviles (MA).
+
+Estos modelos permiten describir y pronosticar el comportamiento de una serie de tiempo a partir de sus valores y errores pasados.
+
+##**Metodología Box-Jenkins**
+
+La metodología Box-Jenkins es un enfoque sistemático que permite identificar, estimar y validar modelos ARMA o ARIMA que se ajusten adecuadamente a una serie de tiempo. Esta metodología consta de cuatro etapas principales:
+
+1. **Identificación del modelo**
+En esta etapa se analiza si la serie es estacionaria. Si no lo es, se aplican transformaciones (como la diferenciación) para lograr la estacionariedad. A continuación, se identifican los posibles valores de los parámetros del modelo ARIMA(p, d, q), con base en el análisis gráfico y estadístico.
+
+**Actividades comunes:**
+
+* Análisis gráfico: para detectar tendencia, estacionalidad o cambios en la media.
+
+* Prueba de estacionariedad: como la prueba de Dickey-Fuller, que evalúa si la serie tiene raíz unitaria.
+
+* Diferenciación: si la serie no es estacionaria, se aplica una o más veces para lograr la estacionariedad y determinar el parámetro d.
+
+* Revisión de ACF y PACF:
+
+ACF (autocorrelación): ayuda a identificar el orden q (media móvil).
+
+PACF (autocorrelación parcial): permite sugerir el orden p (autorregresivo).
+
+2. **Estimación de parámetros**
+Una vez identificado el modelo, se ajusta a los datos para estimar sus parámetros.
+
+**Actividades:**
+
+* Estimar los coeficientes mediante métodos como máxima verosimilitud.
+
+* Evaluar la significancia estadística de los parámetros.
+
+* Comparar modelos alternativos utilizando criterios como:
+
+AIC (Criterio de Información de Akaike)
+
+BIC (Criterio de Información Bayesiano)
+
+RMSE (Raíz del error cuadrático medio)
+
+3. **Verificación del modelo**
+Se valida que los residuos del modelo se comporten como ruido blanco, es decir, que no presenten autocorrelación y tengan media cero y varianza constante.
+
+**Actividades:**
+
+* Analizar los residuos en el tiempo.
+
+* Revisar los gráficos de ACF y PACF de los residuos.
+
+* Verificar la normalidad mediante histogramas o pruebas como Shapiro-Wilk.
+
+* Verificar independencia mediante pruebas como Ljung-Box.
+
+Si los supuestos no se cumplen, se debe reconsiderar el modelo y repetir las etapas anteriores.
+
+4. **Pronóstico**
+Una vez validado el modelo, se procede a generar pronósticos a corto, mediano o largo plazo.
+
+**Actividades:**
+
+* Generar predicciones con intervalos de confianza.
+
+* Comparar los pronósticos con datos reales (si están disponibles).
+
+* Evaluar la precisión del modelo predictivo.
+
+<!--chapter:end:EDA.Rmd-->
+
+`r if (knitr:::is_html_output()) '
+# Referencias {-}
+'`
+
+<!--chapter:end:06-references.Rmd-->
 
