--- a/book.bib
+++ b/book.bib
@@ -47,3 +47,32 @@
   note = {Acceso al PDF: \url{https://repositorio.uniandes.edu.co/bitstreams/6ab918dc-dc2d-4ee4-85d7-ee139f7d195c/download}}
 }
 
+@misc{prophet_doc,
+  author       = {{Facebook Core Data Science Team}},
+  title        = {Prophet Documentation: Quick Start},
+  year         = {2023},
+  url          = {https://facebook.github.io/prophet/docs/quick_start.html},
+  note         = {Accessed: 2025-05-23}
+}
+
+
+@book{hamilton1994time,
+  title     = {Time Series Analysis},
+  author    = {Hamilton, James D.},
+  year      = {1994},
+  publisher = {Princeton University Press},
+  address   = {Princeton, NJ},
+  isbn      = {9780691042893}
+}
+
+@book{ljung1999system,
+  title     = {System Identification: Theory for the User},
+  author    = {Ljung, Lennart},
+  publisher = {Prentice Hall},
+  year      = {1999},
+  edition   = {2nd},
+  isbn      = {9780136566953},
+  address   = {Upper Saddle River, NJ}
+}
+
+
